fixed and change mouse to chevron mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -1220,19 +1220,88 @@ footer .marge-bot{
   color: black;
 }
 
-.icon-scroll,
-.icon-scroll:before {
-  position: absolute;
-  left: 50%;
+.container-chevron {
+  position: relative;
+   align-items: center;
+   margin-top: 45px;
 }
-.icon-scroll {
-  width: 28.6px;
-  height: 50px;
-  margin-left: -20px;
-  bottom:3%;
-  margin-top: -35px;
-  box-shadow: inset 0 0 0 1px #000;
-  border-radius: 25px;
+
+.chevron {
+  position: absolute;
+  width: 28px;
+  height: 8px;
+  opacity: 0;
+  transform: scale3d(0.5, 0.5, 0.5);
+  animation: move 3s ease-out infinite;
+  left: 48%;
+  right:48%;
+
+}
+
+.chevron:first-child {
+  animation: move 3s ease-out 1s infinite;
+}
+
+.chevron:nth-child(2) {
+  animation: move 3s ease-out 2s infinite;
+}
+
+.chevron:before,
+.chevron:after {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 51%;
+  background: #ee483e;
+}
+
+.chevron:before {
+  left: 0;
+  transform: skew(0deg, 30deg);
+}
+
+.chevron:after {
+  right: 0;
+  width: 50%;
+  transform: skew(0deg, -30deg);
+}
+
+@keyframes move {
+  25% {
+    opacity: 1;
+
+  }
+  33% {
+    opacity: 1;
+    transform: translateY(30px);
+  }
+  67% {
+    opacity: 1;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+  }
+}
+
+.text {
+  display: inline-block;
+  margin-top: 75px;
+  font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+  font-size: 12px;
+  color: #ee483e;
+  text-transform: uppercase;
+  white-space: nowrap;
+  opacity: .25;
+  animation: pulse 2s linear alternate infinite;
+}
+
+@keyframes pulse {
+  to {
+    opacity: 1;
+  }
 }
 
 #section1{
@@ -1247,26 +1316,13 @@ footer .marge-bot{
     padding: 6% 0 0 0;
   }
 
-.icon-scroll:before {
-  content: '';
-  width: 6px;
-  height: 6px;
-  background: #000;
-  margin-left: -4px;
-  top: 5px;
-  border-radius: 4px;
-  -webkit-animation-duration: 1.5s;
-          animation-duration: 1.5s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-name: scroll;
-          animation-name: scroll;
-}
+
 
 .mobile .scrolling-block {
   width: 90%;
   opacity: 1;
   color: white;
+  margin: auto;
 }
 
 .mobile .scrolling-block h1{
